# robofer

./: .gitignore  AGENTS.md  CMakeLists.txt  README.md  package.xml
include/robofer/: audio_player.hpp  bluetoothctl_agent.hpp  display.hpp  eyes.hpp  servos.hpp  state_handler.hpp  ui_menu.hpp
include/robofer/actuators/: ControlServo.hpp  controlServo.hpp  servos.hpp
include/robofer/audio/: AudioPlayer.hpp  audio_player.hpp
include/robofer/control/: StateHandler.hpp  state_handler.hpp
include/robofer/input/: ButtonsNode.hpp  buttons.hpp
include/robofer/screen/: Display.hpp  Eyes.hpp  MusicMenu.hpp  UiMenu.hpp  ui_menu.hpp
launch/: eyes_system.launch.py  robofer.launch.py  robofer_sim.launch.py
msg/: EyesCommand.msg  ServoGoal.msg  SoundRequest.msg  WifiNetwork.msg  WifiStatus.msg
src/: bluetoothctl_agent.cpp  display.cpp  eyes.cpp  eyes_node.cpp  eyes_st7735_node.cpp  eyes_unified_node.cpp  keyboard_buttons.cpp  servos.cpp  state_handler_node.cpp  ui_menu.cpp
src/actuators/: ControlServo.cpp  ServoMonitorNode.cpp  controlServo.cpp  servoMonitorNode.cpp  servo_monitor_node.cpp  servos.cpp
src/audio/: AudioPlayer.cpp  audio_player.cpp
src/control/: StateHandler.cpp  state_handler_node.cpp
src/input/: ButtonsNode.cpp  buttons.cpp
src/network/: BluetoothManagerNode.cpp  BtProvisionNode.cpp  WifiManagerNode.cpp  bt_provision_node.cpp  wifi_manager_node.cpp
src/screen/: Display.cpp  Eyes.cpp  EyesNode.cpp  EyesSt7735Node.cpp  EyesUnifiedNode.cpp  MusicMenu.cpp  UiMenu.cpp  display.cpp  eyes.cpp  eyes_node.cpp  eyes_st7735_node.cpp  eyes_unified_node.cpp  ui_menu.cpp
srv/: SetBoolWithCode.srv  WifiGetStatus.srv  WifiScan.srv
