<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>robofer</name>
  <version>0.1.0</version>
  <description>RoboEyes ported to C++ with a ROS 2 simulation node using OpenCV.</description>
  <license>GPL-3.0-or-later</license>
  <maintainer email="you@example.com">Your Name</maintainer>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <build_depend>rclcpp</build_depend>
  <exec_depend>rclcpp</exec_depend>

  <!-- OpenCV from system -->
  <build_depend>opencv4</build_depend>
  <build_export_depend>opencv4</build_export_depend>
  <exec_depend>opencv4</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
    <member_of_group>rosidl_interface_packages</member_of_group>
  </export>
</package>
